# idlib

./: CMakeLists.txt  README.md
cmake/: all.cmake  detect_compiler.cmake  detect_multi_target_generator.cmake  detect_operating_system.cmake
documentation/: idlib-math.md
documentation/vector/: idlib_vector_3_f32_add.md  idlib_vector_3_f32_set.md  idlib_vector_3_f32_set_zero.md
includes/: color.h  colors.i  idlib-math.h  idlib.h  matrix_4x4.h  scalar.h  vector_2.h  vector_3.h
sources/: scalar.c
test/matrix_4x4/: CMakeLists.txt
test/matrix_4x4/sources/: main.c
test/vector_2/: CMakeLists.txt
test/vector_3/: CMakeLists.txt
